bitfield/tests/11-bits-attribute-wrong.stderr
error[E0080]: evaluation of constant value failed
 --> tests/11-bits-attribute-wrong.rs:9:1
  |
9 | #[bitfield]
  | ^^^^^^^^^^^ attempt to compute `1_usize - 9_usize`, which would overflow
  |
  = note: this error originates in the attribute macro `bitfield` (in Nightly builds, run with -Z macro-backtrace for more info)
